--- a/config/database.yml
+++ b/config/database.yml
@@ -5,26 +5,32 @@
 #   gem 'sqlite3'
 #
 default: &default
-  adapter: sqlite3
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  timeout: 5000
+  adapter: mysql2
+  encoding: utf8mb4
+  charset: utf8mb4
+  collation: utf8mb4_general_ci
 
 development:
   <<: *default
-  database: db/development.sqlite3
+  host: 127.0.0.1
+  username: root
+  pool: 5
+  timeout: 5000
+  database: one_ring_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/test.sqlite3
+  host: 127.0.0.1
+  username: root
+  pool: 5
+  timeout: 5000
+  database: one_ring_test
 
 production:
-  adapter: mysql2
+  <<: *default
   url: <%= ENV["ONE_RING_DATABASE_URL"] %>
-  encoding: utf8mb4
-  charset: utf8mb4
-  collation: utf8mb4_general_ci
   pool: 5
   timeout: 5000
